Preferences Editor: Some scrollbar artifacting on certain check boxes #75782

Closed
opened 2020-04-16 12:23:31 +02:00 by Adrian Newton · 7 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.78

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Broken: problem exists in lastest 2.90

Short description of error
Within the Preferences Editor, if you click or click+hold on certain check boxes (nr the ride side of the interface), you get the scrollbar making an appearance.

Exact steps for others to reproduce the error
I have included some of the tab in the Preferences Editor, where this behaviour can be seen.

  1. Interface
    1.1 Display - Developer Extras & Large Cursor checkboxes
    1.2 Editors - Region Overlap, Corner Splitting & Navigation Controls checkboxes
    1.3 Trnslation - New Data checkbox

  2. Viewport
    2.1 Display - Playback FPS checkbox
    2.2 Quality - Overlay Smooth Wires & Edit-Mode Smooth Wires checkboxes.

  3. Input
    3.1 Mouse - Emulate 3 Button Mouse checkbox

  4. Save & Load
    4.1 Auto Save - Auto Save Temporary Files checkbox

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.78 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Broken: problem exists in lastest 2.90 **Short description of error** Within the Preferences Editor, if you click or click+hold on certain check boxes (nr the ride side of the interface), you get the scrollbar making an appearance. **Exact steps for others to reproduce the error** I have included some of the tab in the Preferences Editor, where this behaviour can be seen. 1. Interface 1.1 Display - Developer Extras & Large Cursor checkboxes 1.2 Editors - Region Overlap, Corner Splitting & Navigation Controls checkboxes 1.3 Trnslation - New Data checkbox 2. Viewport 2.1 Display - Playback FPS checkbox 2.2 Quality - Overlay Smooth Wires & Edit-Mode Smooth Wires checkboxes. 3. Input 3.1 Mouse - Emulate 3 Button Mouse checkbox 4. Save & Load 4.1 Auto Save - Auto Save Temporary Files checkbox
Author

Added subscriber: @TheJanitor

Added subscriber: @TheJanitor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

This will be fixed by the soon to be added checkbox alignment change.

This will be fixed by the soon to be added checkbox alignment change.

This issue was referenced by 9029690a5d

This issue was referenced by 9029690a5df8fc34dd8246a6d0104d2c9bd1102c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-04-16 20:56:10 +02:00
Member

This basically happened because the scrollbar hidden state was not updated correctly when preference change caused a refresh of all visible screens. With the current checkbox position, the cursor happened to be close enough to the scrollbars to cause an update to the opacity, which together with the wrong hidden state made it appear for a moment.

This is just a small visual glitch and it would indeed be avoided (but not solved on a technical level) with the new checkbox layout. However while checking the code I noticed that we can remove some old hacks, which would also solve this issue.

This basically happened because the scrollbar hidden state was not updated correctly when preference change caused a refresh of all visible screens. With the current checkbox position, the cursor happened to be close enough to the scrollbars to cause an update to the opacity, which together with the wrong hidden state made it appear for a moment. This is just a small visual glitch and it would indeed be avoided (but not solved on a technical level) with the new checkbox layout. However while checking the code I noticed that we can remove some old hacks, which would also solve this issue.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75782
No description provided.